updating index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
                             <label><input class="form-check-input" type="radio">Pro</label>
                         </div>
                         <div class="form-check">
-                            <label><input class="form-check-input" type="radio">Pro</label>
+                            <label><input class="form-check-input" type="radio">Free</label>
+                        </div>
+                        <!-- Default unchecked -->
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+                            <label class="custom-control-label" for="defaultUnchecked">Remember Me</label>
                         </div>
                         <button type="submit" class="btn btn-default">Submit</button>
                     </form>
